--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <script src="https://unpkg.com/react-router@3.0.0/umd/ReactRouter.js"></script>
   <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script type="text/babel" src="app.js"></script>
+
+  <script type="text/babel" src="components/product_card_component.js"></script>
+  <script type="text/babel" src="components/product_list_component.js"></script>
+  <script type="text/babel" src="components/product_administration_component.js"></script>
+
+  <script type="text/babel" src="containers/product_list_container.js"></script>
+  <script type="text/babel" src="containers/product_administration_container.js"></script>
+  <script type="text/babel" src="index.js"></script>
 </body>
 </html>
